fix: text overlap in left margin

--- a/frontend/assets/css/text-viewer2.scss
+++ b/frontend/assets/css/text-viewer2.scss
@@ -1099,6 +1099,7 @@ $render-sic: false;
       width: 5em;
       text-indent: initial;
     }
+
   }
 
   // 2.284, 1.8
@@ -1208,6 +1209,9 @@ $render-sic: false;
         right: 0;
         position: absolute;
         top: 0;
+      }
+      span.not-a-word{
+        top: -2.5em;
       }
     }
   }
